test/type-check/should-pass/or.bril
#To test if or works.
main { 
  b0: bool = const true;
  b1: bool = const false;
  b2: bool = or b1 b0;
  print b2;
  b1: bool = const true;
  b2: bool = or b1 b0;
  print b2;
  b0: bool = const false;
  b1: bool = const false;
  b2: bool = or b1 b0;
  print b2;
}