test/type-check/should-fail/const.bril
main{

    a: int =  const true;
    print a;
}
